--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,13 @@
 name: Release
 
 on:
-  create:
+  push:
+    branches-ignore:
+      - '**'
     tags:
       - 'v*'
+  release:
+    types: [published]
 
 jobs:
   release-linux-386:
