--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,8 @@
 name: Release
 
 on:
-  push:
-    branches-ignore:
-      - '**'
-    tags:
-      - 'v*'
   release:
-    types: [created, published]
+    types: [published]
 
 jobs:
   release-linux-386:
