--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   release:
-    types: [published]
+    types: [created, published]
 
 jobs:
   release-linux-386:
@@ -28,17 +28,6 @@ jobs:
         CGO_ENABLED: 0
         GOARCH: amd64
         GOOS: linux
-  release-darwin-386:
-    name: release darwin/386
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: "386"
-        GOOS: darwin
   release-darwin-amd64:
     name: release darwin/amd64
     runs-on: ubuntu-latest
