--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         sed -i '/version = "dev"/d' cmd/version.go
         cat <<EOF >>cmd/version.go
-        var version = "$RELEASE_VERSION.$GITHUB_SHA"
+        var version = "$RELEASE_VERSION($GITHUB_SHA)"
         EOF
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
@@ -30,6 +30,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: set env
+      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
+    - name: add version
+      run: |
+        sed -i '/version = "dev"/d' cmd/version.go
+        cat <<EOF >>cmd/version.go
+        var version = "$RELEASE_VERSION($GITHUB_SHA)"
+        EOF
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
@@ -42,6 +50,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: set env
+      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
+    - name: add version
+      run: |
+        sed -i '/version = "dev"/d' cmd/version.go
+        cat <<EOF >>cmd/version.go
+        var version = "$RELEASE_VERSION($GITHUB_SHA)"
+        EOF
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
@@ -54,6 +70,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: set env
+      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
+    - name: add version
+      run: |
+        sed -i '/version = "dev"/d' cmd/version.go
+        cat <<EOF >>cmd/version.go
+        var version = "$RELEASE_VERSION($GITHUB_SHA)"
+        EOF
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
@@ -66,6 +90,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: set env
+      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
+    - name: add version
+      run: |
+        sed -i '/version = "dev"/d' cmd/version.go
+        cat <<EOF >>cmd/version.go
+        var version = "$RELEASE_VERSION($GITHUB_SHA)"
+        EOF
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
